Commit de los cambios sin las capertas que elimine

--- a/Quienes_Somos.html
+++ b/Quienes_Somos.html
@@ -131,6 +131,7 @@
       </div>
     </nav><!-- End Navbar -->
   </header><!-- end header -->
+
   <a id="skippy" class="visually-hidden-focusable" href="#content">
     <div class="container">
       <span class="skiplink-text">Skip to main content</span>
@@ -144,7 +145,7 @@
     </span>
   </progress>
 
-  <main id="content">
+  <main id="content" style="margin-top: 90px;">
     <!-- =========={ HERO }==========  -->
     <div id="hero" class="section pt-7 pt-md-8 pb-9"
       style="background-image: url('src/img-min/section/logo.png');background-size: cover;">
