--- a/index.html
+++ b/index.html
@@ -192,9 +192,8 @@
           <!-- content block -->
           <div class="col-12 col-lg-6 order-lg-1 my-auto showcase-text" data-aos="flip-up">
             <div class="p-5 p-lg-6 ps-lg-0 text-center text-lg-start">
-              <h2 class="h1 fw-bold mb-3">Planificacion de los mantenimientos preventivos</h2>
-              <p class="lead">Podriamos planificar en periodos a corto, mediano y largo plazo deacuerdo a lo que
-                necesite tu empresa y/o clientes.</p>
+              <h2 class="h1 fw-bold mb-3">Planificación de los mantenimientos preventivos</h2>
+              <p class="lead">Podríamos planificar en períodos a corto, mediano y largo plazo de acuerdo a lo que necesite tu empresa y/o clientes.</p>
             </div>
           </div>
         </div>
@@ -234,7 +233,7 @@
               </div>
               <div class="four-service-content">
                 <h3 class="h5">Electricidad, Aires Acon. y Refrigeración.</h3>
-                <p>Estamos enfocados en lo que es la instalaciones, repaciones y mantenimiento a nivel domestico,
+                <p>Estamos enfocados en lo que son las instalaciones, reparaciones y mantenimiento a nivel domestico,
                   comercial e industrial.</p>
               </div>
               <div class="line"></div>
@@ -256,8 +255,7 @@
               </div>
               <div class="four-service-content">
                 <h3 class="h5">Mantenimiento Correctivo</h3>
-                <p>Nos enfocamos en dar un optimo servicio llevando los equipos a un estandar de funcionamiento y
-                  rendimiento a largo plazo.</p>
+                <p>Nos enfocamos en dar un optimo servicio llevando los equipos a un estandar de funcionamiento y rendimiento a largo plazo.</p>
               </div>
               <div class="line"></div>
             </div><!-- end features block -->
@@ -279,8 +277,7 @@
               </div>
               <div class="four-service-content">
                 <h3 class="h5">Ingenieria, diseños y<br>servicios</h3>
-                <p>Estamos enfocados en las areas ya mencionadas de electricidad, refrigeracion y aires
-                  acondicionados.<br> <br></p>
+                <p>Estamos enfocados en las areas ya mencionadas de electricidad, refrigeración y aires acondicionados.<br> <br></p>
               </div>
               <div class="line"></div>
             </div><!-- end features block -->
@@ -309,8 +306,7 @@
               </div>
               <div class="four-service-content">
                 <h3 class="h5">Conexos de <br>Asesoramiento</h3>
-                <p>Contamos con un equipo de profesionales en las areas ya mencionadas con las debidas certificaciones
-                  que exige el mercado.</p>
+                <p>Contamos con un equipo de profesionales en las áreas ya mencionadas con las debidas certificaciones que exige el mercado.</p>
               </div>
               <div class="line"></div>
             </div><!-- end features block -->
@@ -330,8 +326,7 @@
               </div>
               <div class="four-service-content">
                 <h3 class="h5">Mantenimiento Preventivo</h3>
-                <p>Estamos enfocados en realizar una buena planificación para que los equipos mantengan su vida util
-                  dentro de el tiempo requerido.</p>
+                <p>Estamos enfocados en realizar una buena planificación para que los equipos mantengan su vida util dentro de el tiempo requerido.</p>
               </div>
               <div class="line"></div>
             </div><!-- end features block -->
@@ -356,7 +351,7 @@
               </div>
               <div class="four-service-content">
                 <h3 class="h5">Sistemas de <br>Automatizaciones</h3>
-                <p>Estamos certificados en sistemas de automatizacion de alta gama como PLC, CPC, y E2. <br> <br> <br>
+                <p>Estamos certificados en sistemas de automatización de alta gama como PLC, CPC, y E2. <br> <br> <br>
                 </p>
               </div>
               <div class="line"></div>
